--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
 
   <body>
     <noscript>
-      <strong
-        >We're sorry but dashboard doesn't work properly without JavaScript enabled. Please enable it to
-        continue.</strong
-      >
+      <strong>
+          We're sorry but dashboard doesn't work properly without JavaScript enabled. Please enable it to continue.
+      </strong>
     </noscript>
     <div id="app"></div>
-    <script type="module" src="src/main.ts"></script>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
